--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-react-app": "^9.0.2",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "cloud-react": "0.0.18-0",
     "css-loader": "2.1.1",
     "date-fns": "^2.8.1",
     "dotenv": "6.2.0",
@@ -55,6 +56,7 @@
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.4",
     "url-loader": "2.1.0",
+    "vdraggle": "^1.0.1",
     "webpack": "4.41.0",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.1.1",
