--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "babel-preset-react-app": "^9.0.2",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "cloud-react": "0.0.18-0",
+    "cloud-react": "0.0.22",
     "css-loader": "2.1.1",
     "date-fns": "^2.8.1",
     "dotenv": "6.2.0",
